# invoice-agent-app

./: .gitignore  Makefile  README.md  app.py  docker-compose.yaml  invoice.Dockerfile  pyproject.toml
.github/workflows/: copilot-instructions.md  deploy_to_cloud_run.yml
.streamlit/: config.toml
src/finance_analysis/config/: config.py  currency.yaml  global_config.py  input_output.yaml  invoice_config.yaml  model_config.yaml
src/finance_analysis/resources/: agent.py  document_processor.py  extractor.py  get_models.py  invoice_classifier.py  rag_tool.py
src/finance_analysis/services/: file.py  logger.py  session_states.py
src/finance_analysis/utils/: data_models.py  prompts.py  utils.py
src/notebooks/: document_ai.ipynb  gemini_multimodal.ipynb  reimbursement.ipynb
terraform/: main.tf  outputs.tf  variables.tf
